offline/offsite-install-copy-pcf-cloudformation.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Cloudformation template for configuring Pivotal Cloud Foundry on AWS",
  "Parameters": {
    "01NATKeyPair": {
      "Type": "AWS::EC2::KeyPair::KeyName",
      "Description": "Select the SSH keypair to use for the NAT vm"
    },
    "02NATInstanceType": {
      "Type": "String",
      "AllowedValues": [
        "t2.micro",
        "t2.small",
        "t2.medium",
        "m3.large",
        "c4.large",
        "m3.xlarge",
        "c4.xlarge",
        "c4.8xlarge"
      ],
      "ConstraintDescription": "Instance Type must be of a valid EC2 type",
      "Default": "t2.medium",
      "Description": "Select the Instance Type to use for the NAT vm"
    },
    "03OpsManagerIngress": {
      "Type": "String",
      "Default": "0.0.0.0/0",
      "Description": "CIDR range allowed to connect to Ops Manager instance"
    },
    "04RdsDBName": {
      "Type": "String",
      "MinLength": "4",
      "Default": "bosh",
      "Description": "BOSH database name"
    },
    "05RdsUsername": {
      "Type": "String",
      "Description": "BOSH database username"
    },
    "06RdsPassword": {
      "Type": "String",
      "NoEcho": "true",
      "MinLength": "8",
      "Description": "BOSH database password"
    },
    "07SSLCertificateARN": {
      "Type": "String",
      "Description": "ARN for pre-uploaded SSL certificate"
    },
    "08OpsManagerTemplate": {
      "Type": "String",
      "Default": "https://s3.amazonaws.com/pcf-cloudformation/1.5.0.0/pcf.json",
      "Description": "S3 Location for OpsManager CloudFormation Template"
    }
  },
  "Resources": {
    "OpsManStack": {
      "Type": "AWS::CloudFormation::Stack",
      "Properties": {
        "Parameters": {
          "01NATKeyPair": {"Ref": "01NATKeyPair"},
          "02NATInstanceType": {"Ref": "02NATInstanceType"},
          "03OpsManagerIngress": {"Ref": "03OpsManagerIngress"},
          "04RdsDBName": {"Ref": "04RdsDBName"},
          "05RdsUsername": {"Ref": "05RdsUsername"},
          "06RdsPassword": {"Ref": "06RdsPassword"}
        },
        "TemplateURL": {"Ref": "08OpsManagerTemplate"}
      }
    },
    "PcfElbSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "VpcId": { "Fn::GetAtt": [ "OpsManStack", "Outputs.PcfVpc" ] },
        "GroupDescription": "ELB Security Group",
        "SecurityGroupIngress": [
          {
             "CidrIp": "0.0.0.0/0",
             "FromPort": "80",
             "IpProtocol": "tcp",
             "ToPort": "80"
          },
          {
             "CidrIp": "0.0.0.0/0",
             "FromPort": "443",
             "IpProtocol": "tcp",
             "ToPort": "443"
          },
          {
             "CidrIp": "0.0.0.0/0",
             "FromPort": "4443",
             "IpProtocol": "tcp",
             "ToPort": "4443"
          }
        ]
      }
    },
    "PcfElb": {
      "Type": "AWS::ElasticLoadBalancing::LoadBalancer",
      "DependsOn": [
        "PcfElbSecurityGroup",
        "OpsManStack"
      ],
      "Properties": {
        "CrossZone": true,
        "HealthCheck": {
          "HealthyThreshold": "10",
          "Interval": "30",
          "Target": "TCP:80",
          "Timeout": "5",
          "UnhealthyThreshold": "2"
        },
        "ConnectionSettings": {
          "IdleTimeout": 3600
        },
        "LoadBalancerName": { "Fn::Join" : ["", [ { "Ref" : "AWS::StackName" }, "-pcf-elb" ] ] },
        "Listeners": [
          {
            "InstancePort": "80",
            "LoadBalancerPort": "80",
            "Protocol": "http",
            "SSLCertificateId": {"Ref": "07SSLCertificateARN"}
          },
          {
            "InstancePort": "80",
            "LoadBalancerPort": "443",
            "Protocol": "https",
            "SSLCertificateId": {"Ref": "07SSLCertificateARN"}
          },
          {
            "InstancePort": "80",
            "LoadBalancerPort": "4443",
            "Protocol": "ssl",
            "SSLCertificateId": {"Ref": "07SSLCertificateARN"}
          }
        ],
        "Scheme": "internet-facing",
        "SecurityGroups": [
          {
            "Ref": "PcfElbSecurityGroup"
          }
        ],
        "Subnets": [
          { "Fn::GetAtt": [ "OpsManStack", "Outputs.PcfPublicSubnetId" ] }
        ]
      }
    },
    "PcfErtS3BucketIamPolicy": {
      "DependsOn": [
        "OpsManStack"
      ],
      "Type" : "AWS::IAM::Policy",
      "Properties" : {
        "PolicyName" : "PcfErtPolicy",
        "PolicyDocument" : {
          "Version": "2012-10-17",
          "Statement": [
            {
              "Sid": "ElasticRuntimeS3Permissions",
              "Effect": "Allow",
              "Action": ["s3:*"],
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:aws:s3:::",
                      {"Ref": "PcfElasticRuntimeS3Bucket"}
                    ]
                  ]
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:aws:s3:::",
                      {"Ref": "PcfElasticRuntimeS3Bucket"},
                      "/*"
                    ]
                  ]
                }
              ]
            }
          ]
        },
        "Users" : [ {"Fn::GetAtt": [ "OpsManStack", "Outputs.PcfIamUserName" ]} ]
      }
    },
    "PcfElasticRuntimeS3Bucket": {
      "Type": "AWS::S3::Bucket",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "PCF Elastic Runtime S3 Bucket"
          }
        ]
      }
    }
  },
  "Outputs": {
    "PcfElbDnsName": {
      "Value": { "Fn::GetAtt": [ "PcfElb", "DNSName"]}
    },
    "PcfVpc": {
      "Value": {"Fn::GetAtt": [ "OpsManStack", "Outputs.PcfVpc" ]}
    },
    "PcfIamUserName": {
      "Value": {"Fn::GetAtt": [ "OpsManStack", "Outputs.PcfIamUserName" ]}
    },
    "PcfIamUserAccessKey": {
      "Value": {"Fn::GetAtt": [ "OpsManStack", "Outputs.PcfIamUserAccessKey" ]}
    },
    "PcfIamUserSecretAccessKey": {
      "Value": { "Fn::GetAtt": [ "OpsManStack", "Outputs.PcfIamUserSecretAccessKey" ]}
    },
    "PcfOpsManagerS3Bucket": {
      "Value": {"Fn::GetAtt": [ "OpsManStack", "Outputs.PcfOpsManagerS3Bucket" ]}
    },
    "PcfElasticRuntimeS3Bucket": {
      "Value": {"Ref": "PcfElasticRuntimeS3Bucket"}
    },
    "PcfVmsSecurityGroupId": {
      "Value": {"Fn::GetAtt": [ "OpsManStack", "Outputs.PcfVmsSecurityGroupId" ]}
    },
    "PcfOpsManagerSecurityGroupId": {
      "Value": {"Fn::GetAtt": [ "OpsManStack", "Outputs.PcfOpsManagerSecurityGroupId" ]}
    },
    "PcfPrivateSubnetId": {
      "Value": {"Fn::GetAtt": [ "OpsManStack", "Outputs.PcfPrivateSubnetId" ]}
    },
    "PcfPrivateSubnetAvailabilityZone": {
      "Value": { "Fn::GetAtt" : [ "OpsManStack", "Outputs.PcfPrivateSubnetAvailabilityZone" ] }
    },
    "PcfPublicSubnetId": {
      "Value": {"Fn::GetAtt": [ "OpsManStack", "Outputs.PcfPublicSubnetId" ]}
    },
    "PcfPublicSubnetAvailabilityZone": {
      "Value": { "Fn::GetAtt" : [ "OpsManStack", "Outputs.PcfPublicSubnetAvailabilityZone" ] }
    },
    "PcfRdsAddress": {
      "Value": { "Fn::GetAtt": [ "OpsManStack", "Outputs.PcfRdsAddress" ]}
    },
    "PcfRdsPort": {
      "Value": {"Fn::GetAtt": [ "OpsManStack", "Outputs.PcfRdsPort" ]}
    },
    "PcfRdsUsername": {
      "Value": {"Fn::GetAtt": [ "OpsManStack", "Outputs.PcfRdsUsername" ]}
    },
    "PcfRdsPassword": {
      "Value": {"Fn::GetAtt": [ "OpsManStack", "Outputs.PcfRdsPassword" ]}
    },
    "PcfRdsDBName": {
      "Value": {"Fn::GetAtt": [ "OpsManStack", "Outputs.PcfRdsDBName" ]}
    },
    "PcfKeyPairName": {
      "Value": {"Fn::GetAtt": [ "OpsManStack", "Outputs.PcfKeyPairName" ]}
    }
  }
}
